# packages/server/src/api/admin/index.ts
@@ -11,6 +11,23 @@ const logger = logs('fuzd-cf-worker-admin-api');
 
 export function getAdminAPI<Env extends Bindings = Bindings>(options: ServerOptions<Env>) {
 	const tmp = new Hono<{Bindings: Env & {}}>()
+		.get('/paymentAccountBroadcaster', async (c) => {
+			try {
+				const config = c.get('config');
+
+				return c.json(
+					{
+						success: true as const,
+						paymentAccountBroadcaster: config.paymentAccount
+							? config.account.deriveForAddress(config.paymentAccount)
+							: null,
+					},
+					200,
+				);
+			} catch (err) {
+				return c.json(createErrorObject(err), 500);
+			}
+		})
 		// TODO authentication
 		.get('/queue', async (c) => {
 			try {
@@ -45,6 +62,15 @@ export function getAdminAPI<Env extends Bindings = Bindings>(options: ServerOpti
 				const config = c.get('config');
 				const txs = await config.executorStorage.getAllExecutions({limit: 100});
 				return c.json({success: true as const, transactions: txs}, 200);
+			} catch (err) {
+				return c.json(createErrorObject(err), 500);
+			}
+		})
+		.get('/checkScheduledExecutionStatus', async (c) => {
+			try {
+				const config = c.get('config');
+				const result = await config.scheduler.checkScheduledExecutionStatus();
+				return c.json({success: true as const, result}, 200);
 			} catch (err) {
 				return c.json(createErrorObject(err), 500);
 			}
