# packages/server/src/api/scheduling/index.ts
@@ -14,18 +14,27 @@ const validate = createValidate<ScheduledExecution<ExecutionSubmission<MyTransac
 export function getSchedulingAPI<Env extends Bindings = Bindings>(options: ServerOptions<Env>) {
 	const app = new Hono<{Bindings: Env & {}}>()
 
-		.post('/scheduleExecution', auth({debug: false}), typiaValidator('json', validate), async (c) => {
-			try {
-				const config = c.get('config');
-				const account = c.get('account');
-				const data = c.req.valid('json');
+		.post(
+			'/scheduleExecution',
+			auth({debug: false, signReception: true}),
+			typiaValidator('json', validate),
+			async (c) => {
+				try {
+					const config = c.get('config');
+					const account = c.get('account');
+					const data = c.req.valid('json');
+					const receptionSignature = c.get('receptionSignature');
+					if (!receptionSignature) {
+						throw new Error(`no reception signature set`);
+					}
 
-				const result = await config.scheduler.scheduleExecution(account, data);
-				return c.json({success: true as const, info: result}, 200);
-			} catch (err) {
-				return c.json(createErrorObject(err), 500);
-			}
-		})
+					const result = await config.scheduler.scheduleExecution(account, data);
+					return c.json({success: true as const, info: result, signature: receptionSignature}, 200);
+				} catch (err) {
+					return c.json(createErrorObject(err), 500);
+				}
+			},
+		)
 
 		.get('/reserved/:chainId/:account/:slot', async (c) => {
 			try {
@@ -48,7 +57,7 @@ export function getSchedulingAPI<Env extends Bindings = Bindings>(options: Serve
 			}
 		})
 
-		.get('/queuedExecution/:chainId/:account/:slot', async (c) => {
+		.get('/scheduledExecution/:chainId/:account/:slot', async (c) => {
 			try {
 				const config = c.get('config');
 
@@ -63,7 +72,7 @@ export function getSchedulingAPI<Env extends Bindings = Bindings>(options: Serve
 			}
 		})
 
-		.get('/queuedExecution/:chainId/:account', async (c) => {
+		.get('/scheduledExecutions/:chainId/:account', async (c) => {
 			try {
 				const config = c.get('config');
 
